# SNHU_CS-340

./: Animal Shelter Database and Dashboard.docx  README.md  pyproject.toml
notebooks/: Module Five Assignment.ipynb  ModuleSixMilestone-Template.ipynb  ProjectTwoDashboard.ipynb
src/grazioso/: __init__.py  crud.py  models.py  scripts.py
src/grazioso/dashboard/: README.md  __init__.py  app.py  callbacks.py  layouts.py  settings.py  utils.py
tests/: test_crud_notebook.ipynb
typings/dash_bootstrap_components/: __init__.pyi  icons.pyi
typings/dash_bootstrap_components/_components/: Accordion.pyi  AccordionItem.pyi  Alert.pyi  Badge.pyi  Breadcrumb.pyi  Button.pyi  ButtonGroup.pyi  Card.pyi  CardBody.pyi  CardFooter.pyi  CardGroup.pyi  CardHeader.pyi  CardImg.pyi  CardImgOverlay.pyi  CardLink.pyi  Carousel.pyi  Checkbox.pyi  Checklist.pyi  Col.pyi  Collapse.pyi  (+47 more)
typings/dash_leaflet/: AttributionControl.pyi  BaseLayer.pyi  Circle.pyi  CircleMarker.pyi  Colorbar.pyi  DivMarker.pyi  EasyButton.pyi  EditControl.pyi  FeatureGroup.pyi  FullScreenControl.pyi  GeoJSON.pyi  GestureHandling.pyi  ImageOverlay.pyi  LayerGroup.pyi  LayersControl.pyi  LocateControl.pyi  MapContainer.pyi  Marker.pyi  MeasureControl.pyi  Overlay.pyi  Pane.pyi  Polygon.pyi  Polyline.pyi  PolylineDecorator.pyi  Popup.pyi  Rectangle.pyi  SVGOverlay.pyi  ScaleControl.pyi  TileLayer.pyi  Tooltip.pyi  VideoOverlay.pyi  WMSTileLayer.pyi  ZoomControl.pyi  __init__.pyi  _imports_.pyi  express.pyi
typings/jupyter_dash/: __init__.pyi  _stoppable_thread.pyi  comms.pyi  jupyter_app.pyi
typings/plotly/: __init__.pyi  basedatatypes.pyi  basewidget.pyi  tools.pyi
(+240 files in other folders)
