[project]
name = "grazioso-salvare"
version = "0.1.0"
description = ""
authors = [
    {name = "Brett Plemons",email = "brett.plemons@snhu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.11.3,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "jupyter-dash (>=0.4.2,<0.5.0)",
    "dash (>=3.0.2,<4.0.0)",
    "dash-leaflet (>=1.1.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dash-bootstrap-components (>=2.0.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "grazioso", from = "src"}]

[tool.poetry.scripts]
lint = "grazioso.scripts:run_lint"
format = "grazioso.scripts:run_format"
typecheck = "grazioso.scripts:run_typecheck"
dashboard = "grazioso.scripts:run_dashboard"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pyright = "^1.1.397"
ruff = "^0.11.2"
pandas-stubs = "^2.2.3.250308"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["grazioso"]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle errors (e.g., E501 for line too long)
# F: pyflakes errors (e.g., F401 for unused imports)
# I: isort errors (import sorting)
# N: pep8-naming errors (e.g., N805 for class method first argument)
select = ["E", "F", "I", "N"]

# N805: First argument of classmethod should be named 'cls'
# Ignored because Pydantic validators use 'cls' by convention
ignore = ["N805"]